[gd_scene load_steps=13 format=3 uid="uid://b3d68ym3ec1db"]

[ext_resource type="Script" path="res://Player/Camera.gd" id="1_iydw4"]
[ext_resource type="PackedScene" uid="uid://bdlbr1d4epu11" path="res://Player/player.tscn" id="2_klvgl"]
[ext_resource type="Script" path="res://Player/StateMachine/finite_state_machine.gd" id="3_xls10"]
[ext_resource type="Script" path="res://Player/StateMachine/move.gd" id="4_snwch"]
[ext_resource type="Script" path="res://Player/StateMachine/dash.gd" id="5_tecd5"]
[ext_resource type="Script" path="res://Player/StateMachine/run.gd" id="6_c8jpa"]

[sub_resource type="PlaneMesh" id="PlaneMesh_klqdp"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_vlxm6"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="BoxShape3D" id="BoxShape3D_0dumk"]

[sub_resource type="BoxMesh" id="BoxMesh_2xfhb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fxmop"]
albedo_color = Color(0.768476, 0.258759, 0.418796, 1)

[sub_resource type="BoxMesh" id="BoxMesh_kclq8"]

[node name="Node3D" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.029422, 0.999567, 0, -0.999567, -0.029422, 0, 2.37374, -0.0228663)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 2.48, 0, 0, 0, 10, 0, 0, 0)
mesh = SubResource("PlaneMesh_klqdp")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_vlxm6")

[node name="Enemies" type="Node" parent="."]

[node name="EnemyBase" type="CharacterBody3D" parent="Enemies"]
transform = Transform3D(0.455765, 0, 0, 0, 0.455765, 0, 0, 0, 0.455765, -1.52296, 0.260331, -2.21374)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemies/EnemyBase"]
shape = SubResource("BoxShape3D_0dumk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Enemies/EnemyBase"]
mesh = SubResource("BoxMesh_2xfhb")

[node name="State machine" type="Node" parent="Enemies/EnemyBase"]

[node name="EnemyBase2" type="CharacterBody3D" parent="Enemies"]
transform = Transform3D(0.455765, 0, 0, 0, 0.455765, 0, 0, 0, 0.455765, 1.74725, 0.260331, -2.40513)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemies/EnemyBase2"]
shape = SubResource("BoxShape3D_0dumk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Enemies/EnemyBase2"]
mesh = SubResource("BoxMesh_2xfhb")

[node name="State machine" type="Node" parent="Enemies/EnemyBase2"]

[node name="EnemyBase3" type="CharacterBody3D" parent="Enemies"]
transform = Transform3D(0.455765, 0, 0, 0, 0.455765, 0, 0, 0, 0.455765, 1.90116, 0.260331, 1.75037)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemies/EnemyBase3"]
shape = SubResource("BoxShape3D_0dumk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Enemies/EnemyBase3"]
mesh = SubResource("BoxMesh_2xfhb")

[node name="State machine" type="Node" parent="Enemies/EnemyBase3"]

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("player", "locked_on_target", "camera_target")]
transform = Transform3D(1, 0, 0, 0, 0.352119, 0.935955, 0, -0.935955, 0.352119, -0.180869, 2.64278, 1.00288)
script = ExtResource("1_iydw4")
player = NodePath("../Player")
locked_on_target = NodePath("../Player")
camera_target = NodePath("../Player body fakeout/Camera target")

[node name="Player body fakeout" type="MeshInstance3D" parent="."]
transform = Transform3D(0.559362, 0, 0, 0, 0.559362, 0, 0, 0, 0.559362, -0.314225, 0.243562, 0.646423)
material_override = SubResource("StandardMaterial3D_fxmop")
mesh = SubResource("BoxMesh_kclq8")
skeleton = NodePath("")

[node name="Camera target" type="Node3D" parent="Player body fakeout"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.28921, 1.95917)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player body fakeout"]

[node name="Player" parent="." instance=ExtResource("2_klvgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.68023, 0)

[node name="FiniteStateMachine" type="Node" parent="Player" node_paths=PackedStringArray("state")]
script = ExtResource("3_xls10")
state = NodePath("MoveState")

[node name="MoveState" type="Node" parent="Player/FiniteStateMachine" node_paths=PackedStringArray("controller", "dash", "run")]
script = ExtResource("4_snwch")
controller = NodePath("../..")
dash = NodePath("../DashState")
run = NodePath("../RunState")

[node name="DashState" type="Node" parent="Player/FiniteStateMachine" node_paths=PackedStringArray("controller", "move", "run")]
script = ExtResource("5_tecd5")
controller = NodePath("../..")
move = NodePath("../MoveState")
run = NodePath("../RunState")

[node name="RunState" type="Node" parent="Player/FiniteStateMachine" node_paths=PackedStringArray("controller", "move", "dash")]
script = ExtResource("6_c8jpa")
controller = NodePath("../..")
move = NodePath("../MoveState")
dash = NodePath("../DashState")

[connection signal="on_change_state" from="Player/FiniteStateMachine/MoveState" to="Player/FiniteStateMachine" method="_on_move_state_on_change_state"]
[connection signal="on_change_state" from="Player/FiniteStateMachine/DashState" to="Player/FiniteStateMachine" method="_on_dash_state_on_change_state"]
[connection signal="on_change_state" from="Player/FiniteStateMachine/RunState" to="Player/FiniteStateMachine" method="_on_run_state_on_change_state"]
